fixing overflow

--- a/wp-content/themes/starting-theme/sass/pages/_home.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_home.scss
@@ -201,9 +201,11 @@
     border-top: 10px solid $color__green;
     background: rgba($color__green, .95);
     color: #fff;
-    padding: 25px 0;
+    padding-top: 25px;
+    padding-bottom: 25px;
     @include md {
-      padding: 80px 0;
+      padding-top: 80px;
+      padding-bottom: 80px;
     }
     h1 {
       text-align: center;
